compiler/kernc_cli/tests/soundness/run-pass/const_generics/const_generic_function_item_callback_preserves_signature.rn
// class: const-generic-function-item-callback
// source: function-item callback coercions must instantiate const generic arguments before matching
// exit: 0

fn takes(cb: *Fn([4]i32) i32) i32 {
    return cb([4]i32.{ 1, 2, 3, 4 });
}

fn last[N: usize](arr: [N]i32) i32 {
    return arr.[N - 1];
}

fn main() i32 {
    return takes(last[4]) - 4;
}
