compiler/kernc_cli/tests/soundness/reject/const_generics/const_generic_function_item_callback_mismatch_rejected.rn
// class: const-generic-function-item-callback
// source: callback coercions must reject function items whose instantiated const-generic signatures do not match
// stderr: expected `&Fn([4]i32) i32`

fn takes(cb: &Fn([4]i32) i32) i32 {
    return cb([4]i32.{ 1, 2, 3, 4 });
}

fn last[N: usize](arr: [N]i32) i32 {
    return arr.[N - 1];
}

fn main() i32 {
    return takes(last[3]);
}
